# RotorMind

./: .env.example  .gitattributes  .gitignore  README.md  clear-runs.bat  pyproject.toml  rotormind_streaming.patch  run.bat  run.sh
.claude/: launch.json
.github/workflows/: ci.yml
assistant/app/: agent.py  grounding.py  main.py  tools.py  wiki_logic.py  wiki_vector.py
assistant/static/: index.html  run-panel.js  script.js  style.css
assistant/tests/: eval_retrieval.py  run_retrieval_eval.bat  streaming_fakes.py  test_agent.py  test_corpus.py  test_grounding.py  test_retrieval_eval.py  test_run_endpoint.py  test_tools.py  test_vector.py
assistant/wiki/: api-610-lateral-analysis.md  buckwheat-ginger-banana-cake.md  critical-speeds-and-separation-margin.md  index.md  journal-bearing-theory.md  log.md  reynolds-equation.md  rotordynamics-glossary.md  sweet-potato-soup.md  tomato-juice.md
assistant/wiki/runs/: 2026-07-10-run-001.md  2026-07-10-run-002.md  2026-07-19-run-001.md  2026-07-19-run-002.md  2026-07-19-run-003.md  2026-07-20-run-001.md  2026-07-20-run-002.md
assistant/wiki/runs/2026-07-10-run-001/: report.html
assistant/wiki/runs/2026-07-10-run-002/: report.html
assistant/wiki/runs/2026-07-19-run-001/: report.html
docs/: architecture.md  build-log.md  rag-vetorial.md
engine/rotordynamics/: analysis.py  report.py  report_part2.tmp.py  schema.py  streamlit_app.py
engine/tests/: test_dimensional_sanity.py  test_report.py
knowledge/raw/: README.md
scripts/: backfill_api610_screen.py  clear_runs.py
(+4 files in other folders)
