[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rotordynamics-copilot"
version = "0.1.0"
description = "An agentic engineering copilot: cited rotordynamics Q&A that runs the FEA to back up its answers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # engine (FEA)
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    # assistant (RAG + chat)
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "tiktoken",
    "pydantic>=2",
    "python-dotenv",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28.0", "pandas>=1.3.0"]  # legacy standalone FEA UI
dev = ["pytest"]
# Embedding-based retrieval (the UI's "Vector" toggle). Optional because it
# pulls in torch (~2 GB); without it the app runs lexical-only and the toggle
# disables itself.
vector = ["sentence-transformers>=2.2"]

[tool.setuptools]
packages = ["engine", "engine.rotordynamics", "assistant", "assistant.app"]
